--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     
+    <div class="container">
+        <form class="login-box">
+            <h2>Login</h2>
+
+            <div class="input-group">
+                <label for="usuario">Usuário</label>
+                <input type="text" id="usuario" placeholder="Digite seu usuário" required>
+            </div>
+
+            <div class="input-group">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" placeholder="Digite sua senha" required>
+            </div>  
+
+            <button type="submit">Entrar</button>
+        </form>
+    </div>
 </body>
 </html>
